Backdrop z-index fix

--- a/src/components/CardSet.css
+++ b/src/components/CardSet.css
@@ -21,6 +21,8 @@
 }
 .CardSet-backdrop.active {
   opacity: 0.7;
-  z-index: 100;
   cursor: pointer;
+}
+.CardSet-backdrop.z-index-100 {
+  z-index: 100;
 }
